--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -40,10 +40,10 @@
   - [12.1. CR3寄存器](#121-cr3寄存器)
   - [12.2. handle_ept_violation](#122-handle_ept_violation)
 - [13. 逆向映射机制](#13-逆向映射机制)
-  - [初始化阶段: 注册各个slot时](#初始化阶段-注册各个slot时)
-  - [建立阶段: 填充EPT](#建立阶段-填充ept)
-    - [gfn_to_rmap(): 获取gfn对应的rmap地址](#gfn_to_rmap-获取gfn对应的rmap地址)
-    - [pte_list_add(): 设置rmap](#pte_list_add-设置rmap)
+  - [13.1. 初始化阶段: 注册各个slot时](#131-初始化阶段-注册各个slot时)
+  - [13.2. 建立阶段: 填充EPT](#132-建立阶段-填充ept)
+    - [13.2.1. gfn_to_rmap(): 获取gfn对应的rmap地址](#1321-gfn_to_rmap-获取gfn对应的rmap地址)
+    - [13.2.2. pte_list_add(): 设置rmap](#1322-pte_list_add-设置rmap)
 - [14. 参考](#14-参考)
 
 <!-- /code_chunk_output -->
@@ -2749,7 +2749,9 @@ __direct_map ==> mmu_set_spte==>set_spte  ==》 mmu_need_write_protect  ==》 
 
 ....
 
-linux下根据**虚拟地址**经过**页表转换**得到**物理地址**。怎么根据**物理地址**得到对应的**虚拟地址**呢？这里便用到了**逆向映射**。逆向映射有什么用呢？最重要的，在**页面换出**时，由于**物理内存的管理**由一套**相对独立的机制在负责**，根据**物理页面的活跃程度**，对**物理页面**进行**换出**，而此时就需要**更新引用了此页面的页表**了，否则造成**不同步而出错**。如果获取**对应的物理页面**对应的**pte的地址**呢？内核的做法是先通过**逆向映射**得到**虚拟地址**，根据虚拟地址**遍历页表**得到pte地址。
+linux下根据**虚拟地址**经过**页表转换**得到**物理地址**。怎么根据**物理地址**得到对应的**虚拟地址**呢？这里便用到了**逆向映射**。
+
+逆向映射有什么用呢？最重要的，在**页面换出**时，由于**物理内存的管理**由一套**相对独立的机制在负责**，根据**物理页面的活跃程度**，对**物理页面**进行**换出**，而此时就需要**更新引用了此页面的页表**了，否则造成**不同步而出错**。如果获取**对应的物理页面**对应的**pte的地址**呢？内核的做法是先通过**逆向映射**得到**虚拟地址**，根据虚拟地址**遍历页表**得到pte地址。
 
 在KVM中，逆向映射机制的作用是类似的，但是完成的却**不是**从**HPA**到**对应的EPT页表项**的定位，而是从**gfn**到**对应的页表项**的定位。**理论**上讲根据**gfn**一步步**遍历EPT**也未尝不可，但是**效率较低**；况且在**EPT**所维护的**页面不同于host的页表**，理论上讲是**虚拟机之间**是**禁止主动的共享内存**的，为了提高效率，就有了**当前的逆向映射机制**。
 
@@ -2781,7 +2783,7 @@ struct kvm_arch_memory_slot {
 
 其实在**虚拟机中**，**qemu**为虚拟机分配的页面主要是**大页面**，但是这里为了方面，按照4KB的普通页面做介绍。
 
-## 初始化阶段: 注册各个slot时
+## 13.1. 初始化阶段: 注册各个slot时
 
 在qemu为虚拟机**注册各个slot**的时候，在KVM中会初始化逆向映射的相关内存区。
 
@@ -2823,7 +2825,7 @@ static int kvm_alloc_memslot_metadata(struct kvm_memory_slot *slot,
 
 然后为`slot->arch.rmap[i]`分配内存，**每个页面**对应一个**unsigned Long**.
 
-## 建立阶段: 填充EPT
+## 13.2. 建立阶段: 填充EPT
 
 建立阶段自然是在**填充EPT的时候**了，在KVM中维护EPT的核心函数是`kvm_tdp_page_fault`函数。在函数尾部(`__direct_map`尾部的`mmu_set_spte`中)会调用`rmap_add`函数建立逆向映射
 
@@ -2847,7 +2849,7 @@ static int rmap_add(struct kvm_vcpu *vcpu, u64 *spte, gfn_t gfn)
 
 接着就获取了**gfn对应的rmap的地址**，重点看下
 
-### gfn_to_rmap(): 获取gfn对应的rmap地址
+### 13.2.1. gfn_to_rmap(): 获取gfn对应的rmap地址
 
 ```cpp
 static struct kvm_rmap_head *gfn_to_rmap(struct kvm *kvm, gfn_t gfn,
@@ -2880,7 +2882,7 @@ static struct kvm_rmap_head *__gfn_to_rmap(gfn_t gfn, int level,
 
 再次看到了`gfn_to_index`函数，这里就**根据指定的gfn转化成索引**，同时也是在**rmap数组的下标**，然后就**返回对应的表项的地址**，没啥好说的吧……现在地址已经获取到了，还等什么呢？设置吧，调用`pte_list_add`函数，该函数也值得一说
 
-### pte_list_add(): 设置rmap
+### 13.2.2. pte_list_add(): 设置rmap
 
 ```cpp
 /*
