--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -966,7 +966,7 @@ void vmx_load_mmu_pgd(struct kvm_vcpu *vcpu, unsigned long cr3)
 
 # 9. EPT构建过程
 
-与宿主机页表建立过程相似，EPT页表结构也是通过对缺页异常的处理完成的。Guset处在非根模式下运行，加载新的客户进程时，将VMCS客户域CR3的值加载到CR3寄存器(保存的是GPA)，非根模式下的CPU根据EPT页表寻址该GPA->HPA的映射，EPT页表的基址在VMCS执行域的EPTP字段中保存。初始情况下客户进程页表与该进程的父进程共享一套页表结构(COW机制)，Guest CR3指向的客户物理页面为空页面，客户页表缺页，KVM采用不处理客户页表缺页的机制，虚拟机不退出，由客户机的缺页异常处理函数负责分配一个客户物理页面，将该页面物理地址回填，建立客户页表结构；完成该映射的过程需要将GPA翻译到HPA，此时该进程相应的EPT页表为空，产生EPT_VIOLATION，虚拟机退出到根模式下执行，由KVM捕获该异常，建立该GPA到宿主物理地址HPA的映射，完成一套EPT页表的建立，中断返回，切换到非根模式继续运行。VCPU的mmu查询下一级客户页表，根据GVA的偏移产生一条新的GPA，客户机寻址该GPA对应页面，产生客户缺页，不发生VM_Exit，由客户系统的缺页处理函数捕获该异常，从客户物理内存中选择一个空闲页，将该客户物理地址GPA回填给客户页表，此时该GPA对应的EPT页表项不存在，发生EPT_VIOLATION，切换到根模式下，由KVM负责建立该GPA->HPA映射，再切换回非根模式，如此往复，直到非根模式下GVA最后的偏移建立最后一级客户页表，分配GPA，缺页异常退出到根模式建立最后一套EPT页表。至此，一条GVA对应在真实物理内存单元中的内容，便可通过这一套二维页表结构获得。
+与宿主机页表建立过程相似，EPT页表结构也是通过对缺页异常的处理完成的。Guset处在非根模式下运行，加载新的客户进程时，将VMCS客户域CR3的值加载到CR3寄存器(保存的是GPA)，非根模式下的CPU根据EPT页表寻址该`GPA->HPA`的映射，EPT页表的基址在VMCS执行域的EPTP字段中保存。初始情况下**客户进程页表**与**该进程的父进程共享**一套**页表结构**(COW机制)，**Guest CR3**指向的**客户物理页面**为空页面，**客户页表缺页**，KVM采用不处理客户页表缺页的机制，**虚拟机不退出**，由**客户机**的**缺页异常处理函数**负责分配一个**客户物理页面**，将该**页面物理地址回填**，建立**客户页表结构**；完成该映射的过程需要将**GPA翻译到HPA**，此时该进程相应的EPT页表为空，产生`EPT_VIOLATION`，虚拟机退出到根模式下执行，由KVM捕获该异常，建立该GPA到宿主物理地址HPA的映射，完成一套EPT页表的建立，中断返回，切换到非根模式继续运行。VCPU的mmu查询下一级客户页表，根据GVA的偏移产生一条新的GPA，客户机寻址该GPA对应页面，产生客户缺页，不发生VM_Exit，由客户系统的缺页处理函数捕获该异常，从客户物理内存中选择一个空闲页，将该客户物理地址GPA回填给客户页表，此时该GPA对应的EPT页表项不存在，发生EPT_VIOLATION，切换到根模式下，由KVM负责建立该GPA->HPA映射，再切换回非根模式，如此往复，直到非根模式下GVA最后的偏移建立最后一级客户页表，分配GPA，缺页异常退出到根模式建立最后一套EPT页表。至此，一条GVA对应在真实物理内存单元中的内容，便可通过这一套二维页表结构获得。
 
 
 
