--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -848,6 +848,8 @@ vcpu_enter_guest()
       kvm_x86_ops->tlb_flush(vcpu, true);
 ```
 
+调用kvm_mmu_load函数，设置客户CR3
+
 ```cpp
 int kvm_mmu_load(struct kvm_vcpu *vcpu)
 {
@@ -2775,7 +2777,11 @@ linux下根据**虚拟地址**经过**页表转换**得到**物理地址**。怎
 
 逆向映射有什么用呢？最重要的，在**页面换出**时，由于**物理内存的管理**由一套**相对独立的机制在负责**，根据**物理页面的活跃程度**，对**物理页面**进行**换出**，而此时就需要**更新引用了此页面的页表**了，否则造成**不同步而出错**。如果获取**对应的物理页面**对应的**pte的地址**呢？内核的做法是先通过**逆向映射**得到**虚拟地址**，根据虚拟地址**遍历页表**得到pte地址。
 
-在KVM中，逆向映射机制的作用是类似的，但是完成的却**不是**从**HPA**到**对应的EPT页表项**的定位，而是从**gfn**到**对应的页表项**的定位。**理论**上讲根据**gfn**一步步**遍历EPT**也未尝不可，但是**效率较低**；况且在**EPT**所维护的**页面不同于host的页表**，理论上讲是**虚拟机之间**是**禁止主动的共享内存**的，为了提高效率，就有了**当前的逆向映射机制**。
+在KVM中，逆向映射机制的作用是类似的，但是完成的却**不是**从**HPA**到**对应的EPT页表项**的定位，而是从**gfn**到**对应的影子页表项**的定位。**理论**上讲根据**gfn**一步步**遍历EPT**也未尝不可，但是**效率较低**；况且在**EPT**所维护的**页面不同于host的页表**，理论上讲是**虚拟机之间**是**禁止主动的共享内存**的，为了提高效率，就有了**当前的逆向映射机制**。
+
+mmu维护一个**反向映射**，映射这个页的所有页表项，可以通过**gfn**查找到**此页的影子页表项spte**。该反向映射主要用于页面回收或换出时，例如宿主机如果想把客户机的某个物理页面交换到硬盘，宿主机需要能够修改对应的SPT，将该spte设置为不存在，否则客户机访问该页面时将会访问到一个错误的页。
+
+
 
 **虚拟机**的**物理内存**由**多个slot**构成，**每个slot**都是一个`kvm_memory_slot`结构，表示**虚拟机物理内存的一段空间**.
 
