--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2779,7 +2779,13 @@ linux下根据**虚拟地址**经过**页表转换**得到**物理地址**。怎
 
 在KVM中，逆向映射机制的作用是类似的，但是完成的却**不是**从**HPA**到**对应的EPT页表项**的定位，而是从**gfn**到**对应的影子页表项**的定位。**理论**上讲根据**gfn**一步步**遍历EPT**也未尝不可，但是**效率较低**；况且在**EPT**所维护的**页面不同于host的页表**，理论上讲是**虚拟机之间**是**禁止主动的共享内存**的，为了提高效率，就有了**当前的逆向映射机制**。
 
-mmu维护一个**反向映射**，映射这个页的所有页表项，可以通过**gfn**查找到**此页的影子页表项spte**。该反向映射主要用于页面回收或换出时，例如宿主机如果想把客户机的某个物理页面交换到硬盘，宿主机需要能够修改对应的SPT，将该spte设置为不存在，否则客户机访问该页面时将会访问到一个错误的页。
+mmu维护一个**反向映射**，映射这个页的所有页表项，可以通过**gfn**查找到**此页的影子页表项spte**。该反向映射主要用于页面回收或换出时，例如**宿主机**如果想把**客户机的某个物理页面**交换到**硬盘**，宿主机需要能够**修改对应的SPT**，将该**spte**设置为**不存在**，否则客户机访问该页面时将会访问到一个错误的页。
+
+如果通过**反向映射计算spte地址**呢？
+1. **页面回收**时，能够知道**宿主机虚拟地址HVA**
+2. 通过HVA可以计算出GFN，计算公式gfn=(hva-base_hva)>>PAGE_SIZE+base_gfn
+3. 通过反向映射定位到影子页表项spte
+
 
 
 
