--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2803,7 +2803,7 @@ struct kvm_memory_slot {
 };
 ```
 
-`kvm_memory_slot`本质是**qemu进程用户空间的hva**, 仅仅是qemu进程的虚拟地址空间，并**没有对应物理地址**，各个字段的意义不言自明了。其中有一个`kvm_arch_memory_slot`结构，我们重点描述。
+`kvm_memory_slot`本质是**qemu进程用户空间的hva**, 仅仅是**qemu进程的虚拟地址空间**，并**没有对应物理地址**，各个字段的意义不言自明了。其中有一个`kvm_arch_memory_slot`结构，我们重点描述。
 
 ```cpp
 struct kvm_rmap_head {
@@ -2811,13 +2811,14 @@ struct kvm_rmap_head {
 };
 
 struct kvm_arch_memory_slot {
+        // 3
         struct kvm_rmap_head *rmap[KVM_NR_PAGE_SIZES];
         struct kvm_lpage_info *lpage_info[KVM_NR_PAGE_SIZES - 1];
         unsigned short *gfn_track[KVM_PAGE_TRACK_MAX];
 };
 ```
 
-该结构的**rmap字段**是指针数组，每种页面大小对应一项，KVM的大页面支持2M和1G的页面，普通的页面就是4KB了。结合上面的`kvm_memory_slot`结构可以发现，`kvm_arch_memory_slot`其实是`kvm_memory_slot`的一个**内嵌结构**，所以**每个slot**都关联一个`kvm_arch_memory_slot`，也就有一个**rmap数组**。
+该结构的**rmap字段**是指针数组，**每种页面大小**对应**一项**，KVM的大页面支持2M和1G的页面，普通的页面就是4KB了。结合上面的`kvm_memory_slot`结构可以发现，`kvm_arch_memory_slot`其实是`kvm_memory_slot`的一个**内嵌结构**，所以**每个slot**都关联一个`kvm_arch_memory_slot`，也就有一个**rmap数组**。
 
 其实在**虚拟机中**，**qemu**为虚拟机分配的页面主要是**大页面**，但是这里为了方面，按照4KB的普通页面做介绍。
 
