--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2772,9 +2772,22 @@ __direct_map ==> mmu_set_spte==>set_spte  ==》 mmu_need_write_protect  ==》 
 
 首先，对于低层级（level-3 to level-1）的页表页结构 kvm_mmu_page，我们需要设置上一级的相应的页表项地址，然后通过 `mmu_page_add_parent_pte` 设置其`parent_pte`的reverse map;
 
-页分为两类，物理页和页表页，但是我之前没有说的一点是，页表页本身也被分为两类，高层级（level-4 to level-2）的页表页，和最后一级（level-1）的页表页。
+页分为两类，**物理页**和**页表页**，而**页表页**本身也被分为两类，**高层级**（level-4 to level-2）的页表页，和最后一级（level-1）的页表页。
 
-对于高层级的页表页，我们只需要调用 link_shadow_page ，将页表项的值和相应的权限位直接设置上去就好了，但是对于最后一级的页表项，我们除了设置页表项对应的值之外，还需要做另一件事， rmap_add:
+对于高层级的页表页，我们只需要调用 `link_shadow_page` ，将**页表项的值**和**相应的权限**位直接设置上去就好了，但是对于最后一级的页表项，我们除了设置页表项对应的值之外，还需要做另一件事， `rmap_add`:
+
+不管是 `mmu_page_add_parent_pte` ，还是 `mmu_set_spte` 调用的 `rmap_add` ，最后都会调用到 `pte_list_add` 
+
+那么问题来了，这货是干嘛的呢？
+
+翻译成中文的话，**reverse map**被称为**反向映射**，在上面提到的**两个反向映射**中，第一个叫`parent_ptes`，记录的是**页表页**和**指向它的页表项**对应的映射，另一个是**每个gfn**对应的**反向映射rmap**，记录的是**该gfn**对应的**spte**。
+
+我们举rmap为例，**给定一个gfn**，我们怎么找到其对应的rmap呢？
+
+1. 首先，我们通过 `gfn_to_memslot` 得到这个gfn对应的memory slot；
+2. 通过得到的slot和gfn，算出相应的index，然后从 slot->arch.rmap 数组中取出相应的rmap
+
+
 
 
 ....
