--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2784,10 +2784,28 @@ __direct_map ==> mmu_set_spte==>set_spte  ==》 mmu_need_write_protect  ==》 
 
 我们举rmap为例，**给定一个gfn**，我们怎么找到其对应的rmap呢？
 
-1. 首先，我们通过 `gfn_to_memslot` 得到这个gfn对应的memory slot；
-2. 通过得到的slot和gfn，算出相应的index，然后从 slot->arch.rmap 数组中取出相应的rmap
+1. 首先，我们通过 `gfn_to_memslot` 得到**这个gfn**对应的**memory slot**；
+2. 通过得到的**slot**和**gfn**，算出相应的**index**，然后从 `slot->arch.rmap` 数组中取出**相应的rmap**
 
+有了gfn对应的rmap之后，我们再调用 `pte_list_add` 将这次映射得到的**spte**加到这个**rmap**中
 
+看到这里你可能还是一头雾水，rmap到底是什么，为什么加一个rmap的项要那么复杂？
+
+好吧，其实我的理解是这样的：
+
+1. 首先，rmap就是一个**数组**，这个数组的**每个项**都对应了**这个gfn**反向映射出的**某个spte的地址**；
+2. 其次，由于大部分情况下**一个gfn**对应的**spte只有一个**，也就是说，大部分情况下这个数组的大小是1；
+3. 但是，这个数组也可能很大，大到你也不知道应该把数组的大小设到多少合适；
+4. 所以，总结来说，rmap是一个不确定大小，但是大部分情况下大小为1的数组。
+
+这是一个看上去很完美的设计！
+
+由于**spte的地址**只可能是**8的倍数**（?），所以其第一位肯定是0，那么我们就利用这个特点：
+
+1. 我们用一个 unsigned long * 来表示一个rmap，即上文中的 pte_list ；
+2. 如果这个 pte_list 为空，则表示这个rmap之前没有创建过，那么将其赋值，即上文中 0->1 的情况；
+3. 如果这个 pte_list 不为空，但是其第一位是 ，则表示这个rmap之前已经被设置了一个值，那么需要将这个 pte_list 的值改为某个 struct pte_list_desc 的地址，然后将第一位设成 ，来表示该地址并不是单纯的一个spte的地址，而是指向某个 struct pte_list_desc ，这是上文中 1->many 的情况；
+4. 如果这个 pte_list 不为空，而且其第一位是 ，那么通过访问由这个地址得到的 struct pte_list_desc ，得到更多的sptes，即上文中 many->many 的情况。
 
 
 ....
