--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2769,11 +2769,11 @@ __direct_map ==> mmu_set_spte==>set_spte  ==》 mmu_need_write_protect  ==》 
 
 其实它们都和reverse map有关
 
-首先，对于低层级（level-3 to level-1）的页表页结构 kvm_mmu_page，我们需要设置上一级的相应的页表项地址，然后通过 `mmu_page_add_parent_pte` 设置其`parent_pte`的reverse map;
+首先，对于**低层级**（`level-3` to `level-1`）的**页表页结构** `kvm_mmu_page`，我们需要设置**上一级的相应的页表项地址**，然后通过 `mmu_page_add_parent_pte` 设置其`parent_pte`的reverse map;
 
 页分为两类，**物理页**和**页表页**，而**页表页**本身也被分为两类，**高层级**（level-4 to level-2）的页表页，和最后一级（level-1）的页表页。
 
-对于**高层级的页表页**，我们只需要调用 `link_shadow_page` ，将**页表项的值**和**相应的权限**位直接设置上去就好了，但是对于最后一级的页表项，我们除了设置页表项对应的值之外，还需要做另一件事， `rmap_add`:
+对于**高层级的页表页**，我们只需要调用 `link_shadow_page` ，将**页表项的值**和**相应的权限**位直接设置上去就好了，但是对于**最后一级**的**页表项**，我们除了设置页表项对应的值之外，还需要做另一件事， `rmap_add`:
 
 不管是 `mmu_page_add_parent_pte` ，还是 `mmu_set_spte` 调用的 `rmap_add` ，最后都会调用到 `pte_list_add` 
 
@@ -2795,7 +2795,7 @@ __direct_map ==> mmu_set_spte==>set_spte  ==》 mmu_need_write_protect  ==》 
 好吧，其实我的理解是这样的：
 
 1. 首先，rmap就是一个**数组**，这个数组的**每个项**都对应了**这个gfn**反向映射出的**某个spte的地址**；
-2. 其次，由于大部分情况下**一个gfn**对应的**spte只有一个**，也就是说，大部分情况下这个数组的大小是1；
+2. 其次，由于大部分情况下**一个gfn**对应的**spte只有一个**，也就是说，大部分情况下**这个数组的大小是1**；
 3. 但是，这个数组也可能很大，大到你也不知道应该把数组的大小设到多少合适；
 4. 所以，总结来说，rmap是一个不确定大小，但是大部分情况下大小为1的数组。
 
