--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -39,7 +39,9 @@
 - [12. EPT VM-exit 处理](#12-ept-vm-exit-处理)
   - [12.1. CR3寄存器](#121-cr3寄存器)
   - [12.2. handle_ept_violation](#122-handle_ept_violation)
-- [13. 两种逆向映射](#13-两种逆向映射)
+- [13. 逆向映射机制](#13-逆向映射机制)
+  - [两种逆向映射](#两种逆向映射)
+  - [rmap逆向映射: gfn对应的spte](#rmap逆向映射-gfn对应的spte)
   - [13.1. rmap相关数据结构](#131-rmap相关数据结构)
   - [13.2. 初始化阶段: 注册各个slot时](#132-初始化阶段-注册各个slot时)
   - [13.3. 建立阶段: 填充EPT](#133-建立阶段-填充ept)
@@ -2760,7 +2762,9 @@ d)  如果free 了root则 将页移入invalid_list
 __direct_map ==> mmu_set_spte==>set_spte  ==》 mmu_need_write_protect  ==》 kvm_unsync_pages  ==》 __kvm_unsync_page==》kvm_mmu_mark_parents_unsync
 
 
-# 13. 两种逆向映射
+# 13. 逆向映射机制
+
+## 两种逆向映射
 
 有两个很重要的函数：
 
@@ -2783,7 +2787,9 @@ __direct_map ==> mmu_set_spte==>set_spte  ==》 mmu_need_write_protect  ==》 
 - 第一个叫`parent_ptes`，记录的是**页表页**和**指向它的页表项**对应的映射，
 - 另一个是**每个gfn**对应的**反向映射rmap**，记录的是**该gfn**对应的**spte**。
 
-我们举rmap为例，**给定一个gfn**，我们怎么找到其对应的rmap呢？
+## rmap逆向映射: gfn对应的spte
+
+我们举rmap为例，**给定一个gfn**，我们怎么找到**其对应的rmap**呢？
 
 1. 首先，我们通过 `gfn_to_memslot` 得到**这个gfn**对应的**memory slot**；
 2. 通过得到的**slot**和**gfn**，算出相应的**index**，然后从 `slot->arch.rmap` 数组中取出**相应的rmap**
