--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2768,8 +2768,8 @@ __direct_map ==> mmu_set_spte==>set_spte  ==》 mmu_need_write_protect  ==》 
 
 有两个很重要的函数：
 
-- `mmu_page_add_parent_pte`
-- `mmu_set_spte`
+- `mmu_page_add_parent_pte`: **页表页**和**指向它的页表项**
+- `mmu_set_spte`: **gfn**和**对应的spte**
 
 其实它们都和reverse map有关
 
