--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2807,9 +2807,9 @@ __direct_map ==> mmu_set_spte==>set_spte  ==》 mmu_need_write_protect  ==》 
 
 这是一个看上去很完美的设计！
 
-由于**spte的地址**只可能是**8的倍数**（?），所以其第一位肯定是0，那么我们就利用这个特点：
+由于**spte的地址**只可能是**8的倍数**（?），所以其**第一位肯定是0**，那么我们就利用这个特点：
 
-1. 我们用一个 unsigned long * 来表示一个rmap，即上文中的 pte_list ；
+1. 我们用一个 unsigned long * 来表示一个rmap，即 rmap->val ；
 2. 如果这个 pte_list 为空，则表示这个rmap之前没有创建过，那么将其赋值，即上文中 0->1 的情况；
 3. 如果这个 pte_list 不为空，但是其第一位是 ，则表示这个rmap之前已经被设置了一个值，那么需要将这个 pte_list 的值改为某个 struct pte_list_desc 的地址，然后将第一位设成 ，来表示该地址并不是单纯的一个spte的地址，而是指向某个 struct pte_list_desc ，这是上文中 1->many 的情况；
 4. 如果这个 pte_list 不为空，而且其第一位是 ，那么通过访问由这个地址得到的 struct pte_list_desc ，得到更多的sptes，即上文中 many->many 的情况。
