--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2862,14 +2862,14 @@ struct kvm_rmap_head {
 };
 
 struct kvm_arch_memory_slot {
-        // 3, 每种页面大小对应一项
+        // 3, 每种页面大小对应一个链表
         struct kvm_rmap_head *rmap[KVM_NR_PAGE_SIZES];
         struct kvm_lpage_info *lpage_info[KVM_NR_PAGE_SIZES - 1];
         unsigned short *gfn_track[KVM_PAGE_TRACK_MAX];
 };
 ```
 
-该结构的**rmap字段**是指针数组，**每种页面大小**对应**一项**，KVM的大页面支持2M和1G的页面，普通的页面就是4KB了。
+该结构的**rmap字段**是指针数组，**每种页面大小**对应**一个链表**，KVM的大页面支持2M和1G的页面，普通的页面就是4KB了。
 
 结合上面的`kvm_memory_slot`结构可以发现，`kvm_arch_memory_slot`其实是`kvm_memory_slot`的一个**内嵌结构**，所以**每个slot**都关联一个`kvm_arch_memory_slot`，也就有一个**rmap数组**。
 
