--- a/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
+++ b/Virtualization/KVM/4. 内存虚拟化/3. 主要数据结构.md
@@ -154,7 +154,7 @@ struct kvm_lpage_info {
 
 struct kvm_arch_memory_slot {
         // 反向映射结构（reverse map）
-        // 数组, 3个指针, 每种页面大小对应一项
+        // 数组, 3个指针, 每种页面大小对应一个链表
         struct kvm_rmap_head *rmap[KVM_NR_PAGE_SIZES];
         // Large page结构（如2MB、1GB大小页面）
         struct kvm_lpage_info *lpage_info[KVM_NR_PAGE_SIZES - 1];
@@ -162,7 +162,7 @@ struct kvm_arch_memory_slot {
 };
 ```
 
-该结构的**rmap字段**是指针数组，每种页面大小对应一项，KVM的大页面支持2M和1G的页面，普通的页面就是4KB了。结合上面的`kvm_memory_slot`结构可以发现，`kvm_arch_memory_slot`其实是`kvm_memory_slot`的一个**内嵌结构**，所以**每个slot**都关联一个`kvm_arch_memory_slot`，也就有一个**rmap数组**。其实在**虚拟机中**，**qemu**为虚拟机分配的页面主要是**大页面**。
+该结构的**rmap字段**是指针数组，每种页面大小**对应一个链表**，KVM的大页面支持2M和1G的页面，普通的页面就是4KB了。结合上面的`kvm_memory_slot`结构可以发现，`kvm_arch_memory_slot`其实是`kvm_memory_slot`的一个**内嵌结构**，所以**每个slot**都关联一个`kvm_arch_memory_slot`，也就有一个**rmap数组**。其实在**虚拟机中**，**qemu**为虚拟机分配的页面主要是**大页面**。
 
 至于`kvm_userspace_memory_region`可以看qemu部分
 
