--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2814,7 +2814,22 @@ __direct_map ==> mmu_set_spte==>set_spte  ==》 mmu_need_write_protect  ==》 
 3. 如果这个 `rmap_head->val` 不为空，但是其第一位是 ，则表示这个rmap之前已经被设置了一个值，那么需要将这个 `rmap_head->val` 的值改为某个 `struct pte_list_desc` 的地址，然后将第一位设成 ，来表示该地址并不是单纯的一个spte的地址，而是指向某个 `struct pte_list_desc` ，这是上文中 1->many 的情况；
 4. 如果这个 pte_list 不为空，而且其第一位是 ，那么通过访问由这个地址得到的 `struct pte_list_desc` ，得到更多的sptes，即上文中 many->many 的情况。
 
-`struct pte_list_desc`
+`struct pte_list_desc` 它是一个**单链表的节点**，**每个节点**都存有**3个spte的地址**，以及下一个节点的位置。rmap到底有什么用？
+
+举个例子吧，假如操作系统需要进行页面回收或换出，如果宿主机需要把某个客户机物理页换到disk，那么它就需要修改这个页的物理地址gpa对应的spte，将其设置成不存在。
+
+那么这个该怎么做呢？
+
+当然，你可以用软件走一遍ept页表，找到其对应的spte。但是，这样太慢了！这个时候你就会想，如果有一个gfn到spte的反向映射岂不方便很多！于是，reverse map就此派上用场。
+
+这里最后说一点，如果说有这么一个需求：宿主机想要废除当前客户机所有的MMU页结构，那么如何做最快呢？
+
+当然，你可以从EPTP开始遍历一遍所有的页表页，处理掉所有的MMU页面和对应的映射，但是这种方法效率很低。
+
+如果你还记得之前 kvm_mmu_page 结构里面的 mmu_valid_gen 域的话，你就可以通过将kvm->arch.mmu_valid_gen加1，那么当前所有的MMU页结构都变成了invalid，而处理掉页结构的过程可以留给后面的过程（如内存不够时）再处理，这样就可以加快这个过程。
+
+而当`mmu_valid_gen`值达到最大时，可以调用`kvm_mmu_invalidate_zap_all_pages`手动废弃掉所有的MMU页结构。
+
 
 ....
 
