--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2822,16 +2822,15 @@ __direct_map ==> mmu_set_spte==>set_spte  ==》 mmu_need_write_protect  ==》 
 
 当然，你可以用软件走一遍ept页表，找到其对应的spte。但是，这样太慢了！这个时候你就会想，如果有一个gfn到spte的反向映射岂不方便很多！于是，reverse map就此派上用场。
 
-这里最后说一点，如果说有这么一个需求：宿主机想要废除当前客户机所有的MMU页结构，那么如何做最快呢？
+这里最后说一点，如果说有这么一个需求：**宿主机**想要**废除**当前客户机**所有的MMU页结构**，那么如何做最快呢？
 
-当然，你可以从EPTP开始遍历一遍所有的页表页，处理掉所有的MMU页面和对应的映射，但是这种方法效率很低。
+当然，你可以从**EPTP开始**遍历一遍**所有的页表页**，处理掉所有的MMU页面和对应的映射，但是这种方法效率很低。
 
 如果你还记得之前 kvm_mmu_page 结构里面的 mmu_valid_gen 域的话，你就可以通过将kvm->arch.mmu_valid_gen加1，那么当前所有的MMU页结构都变成了invalid，而处理掉页结构的过程可以留给后面的过程（如内存不够时）再处理，这样就可以加快这个过程。
 
 而当`mmu_valid_gen`值达到最大时，可以调用`kvm_mmu_invalidate_zap_all_pages`手动废弃掉所有的MMU页结构。
 
 
-....
 
 linux下根据**虚拟地址**经过**页表转换**得到**物理地址**。怎么根据**物理地址**得到对应的**虚拟地址**呢？这里便用到了**逆向映射**。
 
