--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -2789,7 +2789,30 @@ __direct_map ==> mmu_set_spte==>set_spte  ==》 mmu_need_write_protect  ==》 
 
 ## rmap逆向映射: gfn对应的spte
 
-我们举rmap为例，**给定一个gfn**，我们怎么找到**其对应的rmap**呢？
+linux下根据**虚拟地址**经过**页表转换**得到**物理地址**。怎么根据**物理地址**得到对应的**虚拟地址**呢？这里便用到了**逆向映射**。
+
+逆向映射有什么用呢？最重要的，在**页面换出**时，由于**物理内存的管理**由一套**相对独立的机制在负责**，根据**物理页面的活跃程度**，对**物理页面**进行**换出**，而此时就需要**更新引用了此页面的页表**了，否则造成**不同步而出错**。如果获取**对应的物理页面**对应的**pte的地址**呢？内核的做法是先通过**逆向映射**得到**虚拟地址**，根据虚拟地址**遍历页表**得到pte地址。
+
+在KVM中，逆向映射机制的作用是类似的，但是完成的却**不是**从**HPA**到**对应的EPT页表项**的定位，而是从**gfn**到**对应的影子页表项**的定位。**理论**上讲根据**gfn**一步步**遍历EPT**也未尝不可，但是**效率较低**；况且在**EPT**所维护的**页面不同于host的页表**，理论上讲是**虚拟机之间**是**禁止主动的共享内存**的，为了提高效率，就有了**当前的逆向映射机制**。
+
+mmu维护一个**反向映射**，映射这个页的**所有页表项**，可以通过**gfn**查找到**此页的影子页表项spte**。该反向映射主要用于页面回收或换出时，例如**宿主机**如果想把**客户机的某个物理页面**交换到**硬盘**，宿主机需要能够**修改对应的SPT**，将该**spte**设置为**不存在**，否则客户机访问该页面时将会访问到一个错误的页。
+
+如果通过**反向映射计算spte地址**呢？
+1. **页面回收**时，能够知道**宿主机虚拟地址HVA**
+2. 通过**HVA**可以计算出**GFN**，计算公式`gfn=(hva-base_hva)>>PAGE_SIZE+base_gfn`
+3. 通过**反向映射**定位到**影子页表项spte**
+
+反向映射表相关的结构存储在`kvm_arch_memory_slot.rmap`中，每个元素存储的是一个`pte_list_desc+权限位`，每个`pte_list_desc`是一个单链表的节点，即存储的是一个**单链表结构**。
+
+反向映射表相关的操作如下：
+1. 由gfn获得对应的rmap：`static unsigned long *gfn_to_rmap(struct kvm *kvm, gfn_t gfn, int level)`
+2. 添加gfn反向映射spte：`static int rmap_add(struct kvm_vcpu *vcpu, u64 *spte, gfn_t gfn)`，添加的内容是struct pte_list_desc
+3. 删除反向映射：`static void rmap_remove(struct kvm *kvm, u64 *spte)`
+4. 获得rmap单链表中的元素：首先调用`rmap_get_first()`获得一个有效的rmap_iterator，其次调用`static u64 *rmap_get_next(struct rmap_iterator *iter)`获得链表中的下一个元素
+
+
+
+**给定一个gfn**，我们怎么找到**其对应的rmap**呢？
 
 1. 首先，我们通过 `gfn_to_memslot` 得到**这个gfn**对应的**memory slot**；
 2. 通过得到的**slot**和**gfn**，算出相应的**index**，然后从 `slot->arch.rmap` 数组中取出**相应的rmap**
@@ -2832,26 +2855,9 @@ __direct_map ==> mmu_set_spte==>set_spte  ==》 mmu_need_write_protect  ==》 
 
 
 
-linux下根据**虚拟地址**经过**页表转换**得到**物理地址**。怎么根据**物理地址**得到对应的**虚拟地址**呢？这里便用到了**逆向映射**。
 
-逆向映射有什么用呢？最重要的，在**页面换出**时，由于**物理内存的管理**由一套**相对独立的机制在负责**，根据**物理页面的活跃程度**，对**物理页面**进行**换出**，而此时就需要**更新引用了此页面的页表**了，否则造成**不同步而出错**。如果获取**对应的物理页面**对应的**pte的地址**呢？内核的做法是先通过**逆向映射**得到**虚拟地址**，根据虚拟地址**遍历页表**得到pte地址。
 
-在KVM中，逆向映射机制的作用是类似的，但是完成的却**不是**从**HPA**到**对应的EPT页表项**的定位，而是从**gfn**到**对应的影子页表项**的定位。**理论**上讲根据**gfn**一步步**遍历EPT**也未尝不可，但是**效率较低**；况且在**EPT**所维护的**页面不同于host的页表**，理论上讲是**虚拟机之间**是**禁止主动的共享内存**的，为了提高效率，就有了**当前的逆向映射机制**。
 
-mmu维护一个**反向映射**，映射这个页的所有页表项，可以通过**gfn**查找到**此页的影子页表项spte**。该反向映射主要用于页面回收或换出时，例如**宿主机**如果想把**客户机的某个物理页面**交换到**硬盘**，宿主机需要能够**修改对应的SPT**，将该**spte**设置为**不存在**，否则客户机访问该页面时将会访问到一个错误的页。
-
-如果通过**反向映射计算spte地址**呢？
-1. **页面回收**时，能够知道**宿主机虚拟地址HVA**
-2. 通过**HVA**可以计算出**GFN**，计算公式`gfn=(hva-base_hva)>>PAGE_SIZE+base_gfn`
-3. 通过**反向映射**定位到**影子页表项spte**
-
-反向映射表相关的结构存储在`kvm_arch_memory_slot.rmap`中，每个元素存储的是一个`pte_list_desc+权限位`，每个`pte_list_desc`是一个单链表的节点，即存储的是一个**单链表结构**。
-
-反向映射表相关的操作如下：
-1. 由gfn获得对应的rmap：`static unsigned long *gfn_to_rmap(struct kvm *kvm, gfn_t gfn, int level)`
-2. 添加gfn反向映射spte：`static int rmap_add(struct kvm_vcpu *vcpu, u64 *spte, gfn_t gfn)`，添加的内容是struct pte_list_desc
-3. 删除反向映射：`static void rmap_remove(struct kvm *kvm, u64 *spte)`
-4. 获得rmap单链表中的元素：首先调用`rmap_get_first()`获得一个有效的rmap_iterator，其次调用`static u64 *rmap_get_next(struct rmap_iterator *iter)`获得链表中的下一个元素
 
 ## 13.1. rmap相关数据结构
 
