--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
+++ b/Virtualization/KVM/4. 内存虚拟化/5. EPT机制.md
@@ -40,13 +40,14 @@
   - [12.1. CR3寄存器](#121-cr3寄存器)
   - [12.2. handle_ept_violation](#122-handle_ept_violation)
 - [13. 逆向映射机制](#13-逆向映射机制)
-  - [两种逆向映射](#两种逆向映射)
-  - [rmap逆向映射: gfn对应的spte](#rmap逆向映射-gfn对应的spte)
-  - [13.1. rmap相关数据结构](#131-rmap相关数据结构)
-  - [13.2. 初始化阶段: 注册各个slot时](#132-初始化阶段-注册各个slot时)
-  - [13.3. 建立阶段: 填充EPT](#133-建立阶段-填充ept)
-    - [13.3.1. gfn_to_rmap(): 获取gfn对应的rmap地址](#1331-gfn_to_rmap-获取gfn对应的rmap地址)
-    - [13.3.2. pte_list_add(): 设置rmap](#1332-pte_list_add-设置rmap)
+  - [13.1. 两种逆向映射](#131-两种逆向映射)
+  - [13.2. rmap逆向映射: gfn对应的spte](#132-rmap逆向映射-gfn对应的spte)
+  - [13.3. rmap的用处](#133-rmap的用处)
+  - [13.4. rmap相关数据结构](#134-rmap相关数据结构)
+  - [13.5. 初始化阶段: 注册各个slot时](#135-初始化阶段-注册各个slot时)
+  - [13.6. 建立阶段: 填充EPT](#136-建立阶段-填充ept)
+    - [13.6.1. gfn_to_rmap(): 获取gfn对应的rmap地址](#1361-gfn_to_rmap-获取gfn对应的rmap地址)
+    - [13.6.2. pte_list_add(): 设置rmap](#1362-pte_list_add-设置rmap)
 - [14. 参考](#14-参考)
 
 <!-- /code_chunk_output -->
@@ -2764,7 +2765,7 @@ __direct_map ==> mmu_set_spte==>set_spte  ==》 mmu_need_write_protect  ==》 
 
 # 13. 逆向映射机制
 
-## 两种逆向映射
+## 13.1. 两种逆向映射
 
 有两个很重要的函数：
 
@@ -2787,7 +2788,7 @@ __direct_map ==> mmu_set_spte==>set_spte  ==》 mmu_need_write_protect  ==》 
 - 第一个叫`parent_ptes`，记录的是**页表页**和**指向它的页表项**对应的映射，
 - 另一个是**每个gfn**对应的**反向映射rmap**，记录的是**该gfn**对应的**spte**。
 
-## rmap逆向映射: gfn对应的spte
+## 13.2. rmap逆向映射: gfn对应的spte
 
 linux下根据**虚拟地址**经过**页表转换**得到**物理地址**。怎么根据**物理地址**得到对应的**虚拟地址**呢？这里便用到了**逆向映射**。
 
@@ -2817,9 +2818,6 @@ mmu维护一个**反向映射**，映射这个页的**所有页表项**，可以
 3. 删除反向映射：`static void rmap_remove(struct kvm *kvm, u64 *spte)`
 4. 获得rmap单链表中的元素：首先调用`rmap_get_first()`获得一个有效的rmap_iterator，其次调用`static u64 *rmap_get_next(struct rmap_iterator *iter)`获得链表中的下一个元素
 
-
-
-
 看到这里你可能还是一头雾水，rmap到底是什么，为什么加一个rmap的项要那么复杂？
 
 好吧，其实我的理解是这样的：
@@ -2838,7 +2836,11 @@ mmu维护一个**反向映射**，映射这个页的**所有页表项**，可以
 3. 如果这个 `rmap_head->val` 不为空，但是其第一位是 ，则表示这个rmap之前已经被设置了一个值，那么需要将这个 `rmap_head->val` 的值改为某个 `struct pte_list_desc` 的地址，然后将第一位设成 ，来表示该地址并不是单纯的一个spte的地址，而是指向某个 `struct pte_list_desc` ，这是上文中 1->many 的情况；
 4. 如果这个 pte_list 不为空，而且其第一位是 ，那么通过访问由这个地址得到的 `struct pte_list_desc` ，得到更多的sptes，即上文中 many->many 的情况。
 
-`struct pte_list_desc` 它是一个**单链表的节点**，**每个节点**都存有**3个spte的地址**，以及下一个节点的位置。rmap到底有什么用？
+`struct pte_list_desc` 它是一个**单链表的节点**，**每个节点**都存有**3个spte的地址**，以及下一个节点的位置。
+
+## 13.3. rmap的用处
+
+rmap到底有什么用？
 
 举个例子吧，假如操作系统需要进行页面回收或换出，如果宿主机需要把某个客户机物理页换到disk，那么它就需要修改这个页的物理地址gpa对应的spte，将其设置成不存在。
 
@@ -2854,13 +2856,7 @@ mmu维护一个**反向映射**，映射这个页的**所有页表项**，可以
 
 而当`mmu_valid_gen`值达到最大时，可以调用`kvm_mmu_invalidate_zap_all_pages`手动废弃掉所有的MMU页结构。
 
-
-
-
-
-
-
-## 13.1. rmap相关数据结构
+## 13.4. rmap相关数据结构
 
 **虚拟机**的**物理内存**由**多个slot**构成，**每个slot**都是一个`kvm_memory_slot`结构，表示**虚拟机物理内存的一段空间**.
 
@@ -2897,7 +2893,7 @@ struct kvm_arch_memory_slot {
 
 其实在**虚拟机中**，**qemu**为虚拟机分配的页面主要是**大页面**，但是这里为了方面，按照4KB的普通页面做介绍。
 
-## 13.2. 初始化阶段: 注册各个slot时
+## 13.5. 初始化阶段: 注册各个slot时
 
 在qemu为虚拟机**注册各个slot**的时候，在KVM中会初始化逆向映射的相关内存区。
 
@@ -2939,7 +2935,7 @@ static int kvm_alloc_memslot_metadata(struct kvm_memory_slot *slot,
 
 然后为`slot->arch.rmap[i]`分配内存，**每个页面**对应一个**unsigned Long**.
 
-## 13.3. 建立阶段: 填充EPT
+## 13.6. 建立阶段: 填充EPT
 
 建立阶段自然是在**填充EPT的时候**了，在KVM中维护EPT的核心函数是`kvm_tdp_page_fault`函数。在函数尾部(`__direct_map`尾部的`mmu_set_spte`中)会调用`rmap_add`函数建立逆向映射
 
@@ -2963,7 +2959,7 @@ static int rmap_add(struct kvm_vcpu *vcpu, u64 *spte, gfn_t gfn)
 
 接着就获取了**gfn对应的rmap的地址**，重点看下
 
-### 13.3.1. gfn_to_rmap(): 获取gfn对应的rmap地址
+### 13.6.1. gfn_to_rmap(): 获取gfn对应的rmap地址
 
 ```cpp
 static struct kvm_rmap_head *gfn_to_rmap(struct kvm *kvm, gfn_t gfn,
@@ -2996,7 +2992,7 @@ static struct kvm_rmap_head *__gfn_to_rmap(gfn_t gfn, int level,
 
 再次看到了`gfn_to_index`函数，这里就**根据指定的gfn转化成索引**，同时也是在**rmap数组的下标**，然后就**返回对应的表项的地址**，没啥好说的吧……现在地址已经获取到了，还等什么呢？设置吧，调用`pte_list_add`函数，该函数也值得一说
 
-### 13.3.2. pte_list_add(): 设置rmap
+### 13.6.2. pte_list_add(): 设置rmap
 
 ```cpp
 /*
