--- a/Virtualization/QEMU/4. memory/2. 主要结构体.md
+++ b/Virtualization/QEMU/4. memory/2. 主要结构体.md
@@ -548,3 +548,5 @@ struct AddressSpaceDispatch {
 https://blog.csdn.net/Shirleylinyuer/article/details/83592614
 
 https://www.cnblogs.com/ck1020/p/6729224.html
+
+https://abelsu7.top/2019/07/07/kvm-memory-virtualization/ (未整理)
