--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/2. 功能介绍.md
+++ b/Virtualization/KVM/4. 内存虚拟化/2. 功能介绍.md
@@ -10,6 +10,15 @@
 
 <!-- /code_chunk_output -->
 
+
+
+QEMU-KVM 的内存虚拟化是由 QEMU 和 KVM 二者共同实现的，其本质上是一个将 **Guest 虚拟内存**转换成 **Host 物理内存**的过程。概括来看，主要有以下几点：
+
+* Guest 启动时，由 **QEMU** 从它的**进程地址空间**申请内存并分配给 Guest 使用，即**内存的申请**是在**用户空间**完成的
+* 通过 KVM 提供的 API，QEMU 将 Guest 内存的地址信息传递并注册到 KVM 中维护，即内存的管理是由内核空间的 KVM 实现的
+* 整个转换过程涉及 GVA、GPA、HVA、HPA 四种地址，Guest 的物理地址空间从 QEMU 的虚拟地址空间中分配
+* 内存虚拟化的关键在于维护 GPA 到 HVA 的映射关系，Guest 使用的依然是 Host 的物理内存
+
 # 1. QEMU中物理内存的注册
 
 通过`kvm_vm_ioctl(KVM_SET_USER_MEMORY_REGION)`实现
