--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/2. 功能介绍.md
+++ b/Virtualization/KVM/4. 内存虚拟化/2. 功能介绍.md
@@ -3,6 +3,7 @@
 
 <!-- code_chunk_output -->
 
+- [功能概述](#功能概述)
 - [1. QEMU中物理内存的注册](#1-qemu中物理内存的注册)
 - [2. 处理用户态虚拟地址](#2-处理用户态虚拟地址)
 - [3. KVM同步脏页位图到Qemu](#3-kvm同步脏页位图到qemu)
@@ -10,13 +11,15 @@
 
 <!-- /code_chunk_output -->
 
+# 功能概述
 
+QEMU-KVM 的内存虚拟化是由 QEMU 和 KVM 二者共同实现的，其本质上是一个将 **Guest 虚拟内存**转换成 **Host 物理内存**的过程。
 
-QEMU-KVM 的内存虚拟化是由 QEMU 和 KVM 二者共同实现的，其本质上是一个将 **Guest 虚拟内存**转换成 **Host 物理内存**的过程。概括来看，主要有以下几点：
+概括来看，主要有以下几点：
 
-* Guest 启动时，由 **QEMU** 从它的**进程地址空间**申请内存并分配给 Guest 使用，即**内存的申请**是在**用户空间**完成的
-* 通过 KVM 提供的 API，QEMU 将 Guest 内存的地址信息传递并注册到 KVM 中维护，即内存的管理是由内核空间的 KVM 实现的
-* 整个转换过程涉及 GVA、GPA、HVA、HPA 四种地址，Guest 的物理地址空间从 QEMU 的虚拟地址空间中分配
+* Guest 启动时，由 **QEMU** 从它的**进程地址空间**申请**内存**并分配给 Guest 使用，即**内存的申请**是在**用户空间QEMU**完成的
+* 通过 KVM 提供的 API，**QEMU** 将 **Guest 内存的地址信息**传递并**注册**到 KVM 中维护，即**内存的管理**是由**内核空间**的 **KVM** 实现的
+* 整个**转换过程**涉及 GVA、GPA、HVA、HPA **四种地址**，**Guest 的物理地址空间**从 QEMU 的虚拟地址空间中分配
 * 内存虚拟化的关键在于维护 GPA 到 HVA 的映射关系，Guest 使用的依然是 Host 的物理内存
 
 # 1. QEMU中物理内存的注册
