--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/2. 功能介绍.md
+++ b/Virtualization/KVM/4. 内存虚拟化/2. 功能介绍.md
@@ -3,15 +3,16 @@
 
 <!-- code_chunk_output -->
 
-- [功能概述](#功能概述)
-- [1. QEMU中物理内存的注册](#1-qemu中物理内存的注册)
-- [2. 处理用户态虚拟地址](#2-处理用户态虚拟地址)
-- [3. KVM同步脏页位图到Qemu](#3-kvm同步脏页位图到qemu)
-- [4. EPT页表映射](#4-ept页表映射)
+- [1. 功能概述](#1-功能概述)
+- [传统的地址转换](#传统的地址转换)
+- [2. QEMU中物理内存的注册](#2-qemu中物理内存的注册)
+- [3. 处理用户态虚拟地址](#3-处理用户态虚拟地址)
+- [4. KVM同步脏页位图到Qemu](#4-kvm同步脏页位图到qemu)
+- [5. EPT页表映射](#5-ept页表映射)
 
 <!-- /code_chunk_output -->
 
-# 功能概述
+# 1. 功能概述
 
 QEMU-KVM 的内存虚拟化是由 QEMU 和 KVM 二者共同实现的，其本质上是一个将 **Guest 虚拟内存**转换成 **Host 物理内存**的过程。
 
@@ -19,20 +20,28 @@ QEMU-KVM 的内存虚拟化是由 QEMU 和 KVM 二者共同实现的，其本质
 
 * Guest 启动时，由 **QEMU** 从它的**进程地址空间**申请**内存**并分配给 Guest 使用，即**内存的申请**是在**用户空间QEMU**完成的
 * 通过 KVM 提供的 API，**QEMU** 将 **Guest 内存的地址信息**传递并**注册**到 KVM 中维护，即**内存的管理**是由**内核空间**的 **KVM** 实现的
-* 整个**转换过程**涉及 GVA、GPA、HVA、HPA **四种地址**，**Guest 的物理地址空间**从 QEMU 的虚拟地址空间中分配
-* 内存虚拟化的关键在于维护 GPA 到 HVA 的映射关系，Guest 使用的依然是 Host 的物理内存
+* 整个**转换过程**涉及 GVA、GPA、HVA、HPA **四种地址**，**Guest 的物理地址空间**从 **QEMU 的虚拟地址空间**中分配
+* 内存虚拟化的关键在于维护 **GPA 到 HVA** 的**映射关系**，Guest 使用的依然是 Host 的物理内存
 
-# 1. QEMU中物理内存的注册
+# 传统的地址转换
+
+**64 位 CPU** 上支持 **48 位的虚拟地址**寻址空间，和 **52 位的物理地址**寻址空间。
+
+Linux 采用 **4 级页表**机制将虚拟地址（VA）转换成物理地址（PA），先从页表的基地址寄存器CR3中读取页表的起始地址，然后加上页号得到对应的页表项，从中取出页的物理地址，加上偏移量就得到 PA。
+
+![2020-04-12-20-06-03.png](./images/2020-04-12-20-06-03.png)
+
+# 2. QEMU中物理内存的注册
 
 通过`kvm_vm_ioctl(KVM_SET_USER_MEMORY_REGION)`实现
 
 本质是创建并填充了一个临时kvm_memslots结构，并把其赋值给kvm->memslots（全局的）。
 
-# 2. 处理用户态虚拟地址
+# 3. 处理用户态虚拟地址
 
 https://blog.csdn.net/jinzhuojun/article/details/8147463
 
-# 3. KVM同步脏页位图到Qemu
+# 4. KVM同步脏页位图到Qemu
 
 https://frankjkl.github.io/2019/04/07/QemuKVM-Qemu%E5%90%8C%E6%AD%A5KVM%E8%84%8F%E9%A1%B5%E4%BD%8D%E5%9B%BE/
 
@@ -40,7 +49,7 @@ https://frankjkl.github.io/2019/04/07/QemuKVM-Qemu%E5%90%8C%E6%AD%A5KVM%E8%84%8F
 
 插播qemu对内存条的模拟管理，是通过`RAMBlock`和`ram_list`管理的，**RAMBlock**就是**每次申请的内存池**，`ram_list`则是RAMBlock的**链表**，他们结构如下：
 
-# 4. EPT页表映射
+# 5. EPT页表映射
 
 内存的添加说完了，看一下[EPT页表](http://www.oenhan.com/kernel-program-exec)的映射，在`kvm_arch_vcpu_setup`中有`kvm_mmu_setup`，是mmu的初始化，EPT的初始化是`init_kvm_tdp_mmu`，所谓的初始化就是填充了`vcpu->arch.mmu`结构体，里面有很多回调函数都会用到，最终的是`tdp_page_fault`。
 
