--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/2. 功能介绍.md
+++ b/Virtualization/KVM/4. 内存虚拟化/2. 功能介绍.md
@@ -5,6 +5,7 @@
 
 - [1. 功能概述](#1-功能概述)
 - [传统的地址转换](#传统的地址转换)
+- [QEMU 的内存结构](#qemu-的内存结构)
 - [2. QEMU中物理内存的注册](#2-qemu中物理内存的注册)
 - [3. 处理用户态虚拟地址](#3-处理用户态虚拟地址)
 - [4. KVM同步脏页位图到Qemu](#4-kvm同步脏页位图到qemu)
@@ -30,6 +31,28 @@ QEMU-KVM 的内存虚拟化是由 QEMU 和 KVM 二者共同实现的，其本质
 Linux 采用 **4 级页表**机制将虚拟地址（VA）转换成物理地址（PA），先从页表的基地址寄存器CR3中读取页表的起始地址，然后加上页号得到对应的页表项，从中取出页的物理地址，加上偏移量就得到 PA。
 
 ![2020-04-12-20-06-03.png](./images/2020-04-12-20-06-03.png)
+
+# QEMU 的内存结构
+
+QEMU 利用`mmap`系统调用，在进程的虚拟地址空间中申请连续大小的空间，作为 Guest 的物理内存。
+
+QEMU 作为 Host 上的一个进程运行，Guest 的**每个 vCPU** 都是 QEMU 进程的一个**子线程**。而 Guest 实际使用的仍是 Host 上的物理内存，因此对于 Guest 而言，在进行内存寻址时需要完成以下地址转换过程：
+
+```cpp
+  Guest虚拟内存地址(GVA)
+          |
+    Guest线性地址 
+          |
+   Guest物理地址(GPA)
+          |             Guest
+   ------------------
+          |             Host
+    Host虚拟地址(HVA)
+          |
+      Host线性地址
+          |
+    Host物理地址(HPA)
+```
 
 # 2. QEMU中物理内存的注册
 
