--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/2. 功能介绍.md
+++ b/Virtualization/KVM/4. 内存虚拟化/2. 功能介绍.md
@@ -54,6 +54,23 @@ QEMU 作为 Host 上的一个进程运行，Guest 的**每个 vCPU** 都是 QEMU
     Host物理地址(HPA)
 ```
 
+其中，虚拟地址到线性地址的转换过程可以省略，因此 KVM 的内存寻址主要涉及以下四种地址的转换：
+
+```
+  Guest虚拟内存地址(GVA)
+          |
+   Guest物理地址(GPA)
+          |             Guest
+  ------------------
+          |             Host
+    Host虚拟地址(HVA)
+          |
+    Host物理地址(HPA)
+```
+
+其中，GVA->GPA的映射由 Guest OS 维护，HVA->HPA的映射由 Host OS 维护，因此需要一种机制，来维护GPA->HVA之间的映射关系。
+
+
 # 2. QEMU中物理内存的注册
 
 通过`kvm_vm_ioctl(KVM_SET_USER_MEMORY_REGION)`实现
