--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/1. 基本原理.md
+++ b/Virtualization/KVM/4. 内存虚拟化/1. 基本原理.md
@@ -5,6 +5,8 @@
 
 - [1. 概述](#1-概述)
 - [2. 客户机物理地址空间](#2-客户机物理地址空间)
+- [传统的地址转换](#传统的地址转换)
+- [QEMU 的内存结构](#qemu-的内存结构)
 - [3. 四种地址以及转换关系](#3-四种地址以及转换关系)
   - [3.1. 客户机虚拟地址到客户机物理地址: GVA -> GPA](#31-客户机虚拟地址到客户机物理地址-gva-gpa)
   - [3.2. 客户机物理地址到主机虚拟地址: GPA -> HVA](#32-客户机物理地址到主机虚拟地址-gpa-hva)
@@ -37,7 +39,67 @@
 
 ![config](./images/1.png)
 
-所以就有四种地址
+
+QEMU-KVM 的内存虚拟化是由 QEMU 和 KVM 二者共同实现的，其本质上是一个将 **Guest 虚拟内存**转换成 **Host 物理内存**的过程。
+
+概括来看，主要有以下几点：
+
+* Guest 启动时，由 **QEMU** 从它的**进程地址空间**申请**内存**并分配给 Guest 使用，即**内存的申请**是在**用户空间QEMU**完成的
+* 通过 KVM 提供的 API，**QEMU** 将 **Guest 内存的地址信息**传递并**注册**到 KVM 中维护，即**内存的管理**是由**内核空间**的 **KVM** 实现的
+* 整个**转换过程**涉及 GVA、GPA、HVA、HPA **四种地址**，**Guest 的物理地址空间**从 **QEMU 的虚拟地址空间**中分配
+* 内存虚拟化的关键在于维护 **GPA 到 HVA** 的**映射关系**，Guest 使用的依然是 Host 的物理内存
+
+# 传统的地址转换
+
+**64 位 CPU** 上支持 **48 位的虚拟地址**寻址空间，和 **52 位的物理地址**寻址空间。
+
+Linux 采用 **4 级页表**机制将虚拟地址（VA）转换成物理地址（PA），先从页表的基地址寄存器CR3中读取页表的起始地址，然后加上页号得到对应的页表项，从中取出页的物理地址，加上偏移量就得到 PA。
+
+![2020-04-12-20-06-03.png](./images/2020-04-12-20-06-03.png)
+
+# QEMU 的内存结构
+
+QEMU 利用`mmap`系统调用，在进程的虚拟地址空间中申请连续大小的空间，作为 Guest 的物理内存。
+
+QEMU 作为 Host 上的一个进程运行，Guest 的**每个 vCPU** 都是 QEMU 进程的一个**子线程**。而 Guest 实际使用的仍是 Host 上的物理内存，因此对于 Guest 而言，在进行内存寻址时需要完成以下地址转换过程：
+
+```cpp
+  Guest虚拟内存地址(GVA)
+          |
+    Guest线性地址 
+          |
+   Guest物理地址(GPA)
+          |             Guest
+   ------------------
+          |             Host
+    Host虚拟地址(HVA)
+          |
+      Host线性地址
+          |
+    Host物理地址(HPA)
+```
+
+其中，虚拟地址到线性地址的转换过程可以省略，因此 KVM 的内存寻址主要涉及以下四种地址的转换：
+
+```
+  Guest虚拟内存地址(GVA)
+          |
+   Guest物理地址(GPA)
+          |             Guest
+  ------------------
+          |             Host
+    Host虚拟地址(HVA)
+          |
+    Host物理地址(HPA)
+```
+
+其中，GVA->GPA的映射由 Guest OS 维护，HVA->HPA的映射由 Host OS 维护，因此需要一种机制，来维护GPA->HVA之间的映射关系。
+
+![2020-04-12-21-00-18.png](./images/2020-04-12-21-00-18.png)
+
+常用的实现有SPT(Shadow Page Table)和EPT/NPT，前者通过软件维护影子页表，后者通过硬件特性实现二级映射。
+
+
 
 # 3. 四种地址以及转换关系
 
