--- Auto-Git Commit ---

--- a/Virtualization/KVM/4. 内存虚拟化/2. 功能介绍.md
+++ b/Virtualization/KVM/4. 内存虚拟化/2. 功能介绍.md
@@ -4,6 +4,7 @@
 <!-- code_chunk_output -->
 
 - [QEMU 的主要工作](#qemu-的主要工作)
+- [QEMU 和 KVM 的工作分界](#qemu-和-kvm-的工作分界)
 - [1. QEMU中物理内存的注册](#1-qemu中物理内存的注册)
 - [2. 处理用户态虚拟地址](#2-处理用户态虚拟地址)
 - [3. KVM同步脏页位图到Qemu](#3-kvm同步脏页位图到qemu)
@@ -13,11 +14,16 @@
 
 # QEMU 的主要工作
 
-内存虚拟化的目的就是让虚拟机能够无缝的访问内存。有了 Intel EPT 的支持后，CPU 在 VMX non-root 状态时进行内存访问会再做一次 EPT 转换。在这个过程中，QEMU 会负责以下内容：
+内存虚拟化的目的就是让虚拟机能够无缝的访问内存。有了 **Intel EPT** 的支持后，CPU 在 **VMX non-root** 状态时进行内存访问会**再做一次 EPT 转换**。在这个过程中，QEMU 会负责以下内容：
 
-1. 首先需要从自己的进程地址空间中申请内存用于 Guest
-2. 需要将上一步中申请到的内存的虚拟地址（HVA）和 Guest 的物理地址之间的映射关系传递给 KVM，即GPA->HVA
-3. 需要组织一系列的数据结构来管理虚拟内存空间，并在内存拓扑结构更改时将最新的内存信息同步至 KVM 中
+1. 首先需要从**自己的进程地址空间**中**申请内存**用于 **Guest**
+2. 需要将上一步中申请到的内存的**虚拟地址（HVA**）和 **Guest 的物理地址**之间的**映射关系**传递给 KVM，即`GPA->HVA`
+3. 需要组织一系列的数据结构来**管理虚拟内存空间**，并在**内存拓扑结构更改时**将最新的内存信息**同步**至 **KVM** 中
+
+# QEMU 和 KVM 的工作分界
+
+QEMU 和 KVM 之间是通过 KVM 提供的`ioctl()`接口进行交互的。在内核的`kvm_vm_ioctl()`中，设置虚拟机内存的系统调用为`KVM_SET_USER_MEMORY_REGION`：
+
 
 # 1. QEMU中物理内存的注册
 
