--- a/Virtualization/QEMU/4. memory/2. 主要结构体.md
+++ b/Virtualization/QEMU/4. memory/2. 主要结构体.md
@@ -444,11 +444,11 @@ KVMSlot更接近KVM.
 
 ```cpp
 struct kvm_userspace_memory_region {
-        // 插槽号
+        // 插槽编号
         __u32 slot;
-        // 标志
+        // 标志位，例如是否追踪脏页、是否可用等
         __u32 flags;
-        // 虚拟机物理地址
+        // 虚拟机物理地址, GPA
         __u64 guest_phys_addr;
         // 虚拟机内存大小(字节为单位)
         __u64 memory_size; /* bytes */
