--- a/Virtualization/KVM/4. 内存虚拟化/4. 内存槽(slot)的注册.md
+++ b/Virtualization/KVM/4. 内存虚拟化/4. 内存槽(slot)的注册.md
@@ -3,7 +3,7 @@
 
 <!-- code_chunk_output -->
 
-- [1. 基本原理](#1-基本原理)
+- [1. 基本原理: GPA->HVA](#1-基本原理-gpa-hva)
 - [2. 流程概述](#2-流程概述)
 - [3. 流程分析](#3-流程分析)
   - [3.1. kvm_vm_ioctl(): vm指令入口](#31-kvm_vm_ioctl-vm指令入口)
@@ -12,7 +12,7 @@
 
 <!-- /code_chunk_output -->
 
-# 1. 基本原理
+# 1. 基本原理: GPA->HVA
 
 kvm虚拟机实际运行于`qemu-kvm`的**进程上下文**中，因此，需要建立**虚拟机的物理内存空间**(GPA)与`qemu-kvm`**进程的虚拟地址空间**(HVA)的映射关系。
 
@@ -20,7 +20,7 @@ kvm虚拟机实际运行于`qemu-kvm`的**进程上下文**中，因此，需要
 
 **虚拟机的物理地址空间**实际也是**不连续**的，分成**不同的内存区域**(slot)，因为物理地址空间中通常还包括**BIOS**、**MMIO**、**显存**、**ISA保留**等部分, 也就是说**每一段内存区间**都必须有**独立的作用**。
 
-qemu-kvm通过**ioctl vm**指令`KVM_SET_USER_MEMORY_REGION`来**为虚拟机设置内存**。主要建立**guest物理地址空间**中的内存区域与**qemu-kvm虚拟地址空间中的内存区域**的映射，从而建立其从**GVA到HVA的对应关系**，该**对应关系**主要通过`kvm_mem_slot`结构体保存，所以实质为设置`kvm_mem_slot`结构体, 并关联到`kvm->memslots->memslots[slots->used_slots++]` , 这个是虚拟机全局的。
+qemu-kvm通过**ioctl vm**指令`KVM_SET_USER_MEMORY_REGION`来**为虚拟机设置内存**。主要建立**guest物理地址空间**中的内存区域与**qemu-kvm虚拟地址空间中的内存区域**的映射，从而建立其从**GPA到HVA的对应关系**，该**对应关系**主要通过`kvm_mem_slot`结构体保存，所以实质为设置`kvm_mem_slot`结构体, 并关联到`kvm->memslots->memslots[slots->used_slots++]` , 这个是虚拟机全局的。
 
 本文简介ioctl vm指令`KVM_SET_USER_MEMORY_REGION`在内核中的执行流程，qemu-kvm用户态部分暂不包括。
 
